# router-r1-slime

./: .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.cfg
data_process/: prompt_pool.py  qa_test_gen.py  qa_test_merge.py  qa_train_merge.py
router_r1_example/: README.md  __init__.py  generate_with_router.py  prepare_router_r1_data.sh  prompt_utils.py  qa_em_format.py  routing_service.py  run_router_r1_qwen2.5_3B.sh  run_router_r1_qwen2.5_3B_old.sh
